<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0DB57B"
    tools:context=".fragments.BmiFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oceanlogo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate your BMI"
        android:textColor="#fff"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffff"
            android:padding="8dp"
            >

            <TextView
                android:id="@+id/tvweight"
                android:text="Your Weight in KGs"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etweight"
                android:hint="Enter your weight"
                android:drawableLeft="@drawable/ic_person"
                android:textSize="15sp"
                android:inputType="numberDecimal"
                android:paddingLeft="8dp"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tvheight"
                android:text="Your height in meters"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/etheight"
                android:hint="Enter Height"
                android:inputType="numberDecimal"
                android:drawableLeft="@drawable/ic_password"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/tvbmi"
                android:textSize="25sp"
                android:text="Your BMI:"
                android:fontFamily="@font/aclonica"
                android:textAlignment="center"
                android:background="@drawable/drawable_edittext"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnbmi"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/drawable_button"
                android:text="CALCULATE" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>