<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0DB57B">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oceanlogo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Ocean Fitness"
        android:textColor="#fff"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffff"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvusername"
                android:text="Username"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etusername"
                android:hint="Enter Username"
                android:drawableLeft="@drawable/ic_person"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tvpassword"
                android:text="Password"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/etpassword"
                android:hint="Enter Password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_password"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/drawable_button"
                android:text="Login" />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:onClick="openRegisterActivity"
                android:id="@+id/openRegister"
                android:padding="16dp"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/aclonica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don't have an account? Sign up now !"/>


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>








</LinearLayout>