<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0DB57B"
    tools:context=".fragments.RegisterFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oceanlogo"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:text="Yourname" />

            <EditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawable_edittext"
                android:drawableLeft="@drawable/ic_person"
                android:hint="Enter Name"
                android:paddingLeft="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:text="Username" />

            <EditText
                android:id="@+id/etusername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawable_edittext"
                android:drawableLeft="@drawable/ic_person"
                android:hint="Enter username"
                android:paddingLeft="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:text="Email" />

            <EditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawable_edittext"
                android:drawableLeft="@drawable/ic_email"
                android:hint="Enter email"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:text="Password" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/drawable_edittext"
                android:drawableLeft="@drawable/ic_password"
                android:hint="enter Password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textSize="15sp" />


            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/drawable_button"
                android:text="Sign Up" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>








</LinearLayout>