<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#0DB57B"
    tools:context=".fragments.TrialFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/oceanlogo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Book a Trial"
        android:textColor="#fff"
        android:fontFamily="@font/aclonica"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffff"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvname"
                android:text="Name"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etname"
                android:hint="Enter Name"
                android:drawableLeft="@drawable/ic_person"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tvphone"
                android:text="Phone no"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/etphone"
                android:hint="Enter Phone"
                android:drawableLeft="@drawable/ic_phone"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:inputType="phone"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/tvtype"
                android:text="Trial Type"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/drawable_edittext"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_menu" />

                <Spinner
                    android:id="@+id/ettype"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:entries="@array/trial_type"
                    android:paddingLeft="8dp"
                    android:textSize="15sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvdate"
                android:text="Date"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aclonica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <EditText
                android:id="@+id/etdate"
                android:hint="Pick a Date"
                android:drawableLeft="@drawable/ic_calender"
                android:textSize="15sp"
                android:paddingLeft="8dp"
                android:clickable="true"
                android:background="@drawable/drawable_edittext"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/btnbook"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:text="Book"
                android:background="@drawable/drawable_button" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>